# PracticeWeatherApp

./: pyproject.toml
weatherapp/templates/: index.html
weatherapp/weatherproject/: settings.py  urls.py
