[tool.poetry]
name = "Weather App"
version = "0.1.0"
description = "A practice weather app in Django"
authors = ["Steven Anderson <steven.a.anderson2012@gmail.com>", "Eridian <>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
types-requests = "^2.25.0"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"